--- a/week 3 en 4/vaardigheid/video 31 tm 38/opdracht 10/index.html
+++ b/week 3 en 4/vaardigheid/video 31 tm 38/opdracht 10/index.html
@@ -8,15 +8,7 @@
 </head>
 <body>
     <script>
-        const age = 21;
-if (age >=0 && age <=11){
-    console.log("not so great");
-} else if ( age >=12 && age <=17){
-    console.log("bit great");
-} else if (age >=18){
-    console.log("great");
-}
-
+        "my name is okisch and i'm fritz and my salary is 3000 and it just got doubled"
     </script>
 </body>
 </html>
