--- a/week 3 en 4/vaardigheid/video 31 tm 38/opdracht 12/index.html
+++ b/week 3 en 4/vaardigheid/video 31 tm 38/opdracht 12/index.html
@@ -8,15 +8,13 @@
 </head>
 <body>
     <script>
-        const age = 21;
-if (age >=0 && age <=11){
-    console.log("not so great");
-} else if ( age >=12 && age <=17){
-    console.log("bit great");
-} else if (age >=18){
-    console.log("great");
-}
-
+        let ok = false;
+        const age = 12;
+        const opleiding = "vwo";
+        if(age =>10 && opleiding == "vwo" || "havo" || "vmbo"){
+            ok = true;
+        }
+        console.log(ok);
     </script>
 </body>
 </html>
