--- a/week 3 en 4/vaardigheid/video 31 tm 38/opdracht 3/index.html
+++ b/week 3 en 4/vaardigheid/video 31 tm 38/opdracht 3/index.html
@@ -8,15 +8,13 @@
 </head>
 <body>
     <script>
-        const age = 21;
-if (age >=0 && age <=11){
-    console.log("not so great");
-} else if ( age >=12 && age <=17){
-    console.log("bit great");
-} else if (age >=18){
-    console.log("great");
-}
+        function getal(nummer1 , nummer2, nummer3){
+            return(nummer1 + nummer2 - nummer3)
+        }
 
+        const getal3 = getal(5 , 7,6);
+
+        console.log(getal3)
     </script>
 </body>
 </html>
