--- a/week 3 en 4/vaardigheid/video 31 tm 38/opdracht 4/index.html
+++ b/week 3 en 4/vaardigheid/video 31 tm 38/opdracht 4/index.html
@@ -8,15 +8,12 @@
 </head>
 <body>
     <script>
-        const age = 21;
-if (age >=0 && age <=11){
-    console.log("not so great");
-} else if ( age >=12 && age <=17){
-    console.log("bit great");
-} else if (age >=18){
-    console.log("great");
-}
+        function getal(nummer1, nummer2){
+            return(nummer1 - nummer2)
+        }
 
+        const age = getal(7,4);
+        console.log(age);
     </script>
 </body>
 </html>
