--- a/week 5 en 6/sectie 7/vaardigheid/video deel 1/opdracht 18/index.html
+++ b/week 5 en 6/sectie 7/vaardigheid/video deel 1/opdracht 18/index.html
@@ -7,16 +7,11 @@
     <title>Document</title>
 </head>
 <body>
+    <div class="grid-container_item grid-container_item a">
+        <p1 id="kleur">a</p1>
+    </div>
     <script>
-        const age = 21;
-if (age >=0 && age <=11){
-    console.log("not so great");
-} else if ( age >=12 && age <=17){
-    console.log("bit great");
-} else if (age >=18){
-    console.log("great");
-}
-
+        document.getElementById("kleur").style.background = "red"
     </script>
 </body>
 </html>
