--- a/week 3 en 4/vaardigheid/video 31 tm 38/opdracht 6/index.html
+++ b/week 3 en 4/vaardigheid/video 31 tm 38/opdracht 6/index.html
@@ -8,15 +8,8 @@
 </head>
 <body>
     <script>
-        const age = 21;
-if (age >=0 && age <=11){
-    console.log("not so great");
-} else if ( age >=12 && age <=17){
-    console.log("bit great");
-} else if (age >=18){
-    console.log("great");
-}
-
+        const getal=(5, 12);
+        
     </script>
 </body>
 </html>
