--- a/week 3 en 4/vaardigheid/video 39 tm 41/opdracht 1/index.html
+++ b/week 3 en 4/vaardigheid/video 39 tm 41/opdracht 1/index.html
@@ -8,15 +8,8 @@
 </head>
 <body>
     <script>
-        const age = 21;
-if (age >=0 && age <=11){
-    console.log("not so great");
-} else if ( age >=12 && age <=17){
-    console.log("bit great");
-} else if (age >=18){
-    console.log("great");
-}
-
+        const arrayOne = ['konijn', 'koe', 'vos', 'das', 'beer']
+        console.log(arrayOne[1]);
     </script>
 </body>
 </html>
