--- a/week 3 en 4/vaardigheid/video 39 tm 41/opdracht 6/index.html
+++ b/week 3 en 4/vaardigheid/video 39 tm 41/opdracht 6/index.html
@@ -8,15 +8,9 @@
 </head>
 <body>
     <script>
-        const age = 21;
-if (age >=0 && age <=11){
-    console.log("not so great");
-} else if ( age >=12 && age <=17){
-    console.log("bit great");
-} else if (age >=18){
-    console.log("great");
-}
-
+        const arrayOne = ["Konijn", "Koe", "kat", "dino"];
+        arrayOne[1] = "herder";
+        console.log(arrayOne);
     </script>
 </body>
 </html>
