--- a/week 3 en 4/vaardigheid/video 42 tm 45/opdracht 4/index.html
+++ b/week 3 en 4/vaardigheid/video 42 tm 45/opdracht 4/index.html
@@ -8,15 +8,7 @@
 </head>
 <body>
     <script>
-        const age = 21;
-if (age >=0 && age <=11){
-    console.log("not so great");
-} else if ( age >=12 && age <=17){
-    console.log("bit great");
-} else if (age >=18){
-    console.log("great");
-}
-
+        console.log(8);
     </script>
 </body>
 </html>
