--- a/week 3 en 4/vaardigheid/video 42 tm 45/opdracht 6/index.html
+++ b/week 3 en 4/vaardigheid/video 42 tm 45/opdracht 6/index.html
@@ -8,15 +8,16 @@
 </head>
 <body>
     <script>
-        const age = 21;
-if (age >=0 && age <=11){
-    console.log("not so great");
-} else if ( age >=12 && age <=17){
-    console.log("bit great");
-} else if (age >=18){
-    console.log("great");
+    const properties = {
+        prop1: 'a',
+        prop2: 2,
+        prop3: true,
+        prop4: function() {
+        return `${this.prop1} ${this.prop2} ${this.prop3}`;
+    }
 }
 
+console.log(properties.prop4());
     </script>
 </body>
 </html>
